# deep-claw

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  streaming.py
backend/app/agent/: build.py  email_digest_agent.py  tools.py
backend/app/api/: chat.py  conversations.py  email.py  history.py  notifications.py  schemas.py
backend/app/db/: conversations.py  email_accounts.py  email_messages.py  models.py  notifications.py  session.py
backend/app/email/: __init__.py  client.py  crypto.py  parser.py  service.py  worker.py
backend/tests/: conftest.py  test_agent_tools.py  test_email_api.py  test_email_client.py  test_email_service.py  test_integration_api.py
docs/: README.md  agent-design.md  api-and-streaming.md  architecture.md  ci.md  data-model.md  deployment.md  modules.md  observability.md  tech-stack.md
docs/superpowers/plans/: 2026-03-21-email-sub-agent.md
docs/superpowers/specs/: 2026-03-21-email-sub-agent-design.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: ChatApp.tsx  EmailAccountsPanel.tsx  EmailDigestList.tsx  MarkdownMessage.tsx  NotificationTray.tsx
frontend/lib/: api.ts  emailAccountFlow.js  emailAccountFlow.test.mjs
scripts/: deploy.sh
